# HousingFund

./: .dockerignore  .env  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  start-docker.sh
scripts/: deploy.sh  setup_database.sql
src/: main.cpp
src/config/: Config.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: House.h  User.cpp  User.h
src/ui/: AddEditDialog.cpp  AddEditDialog.h  AuthDialog.cpp  AuthDialog.h  AuthDialog.ui  ExportDialog.cpp  ExportDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/utils/: HashUtils.cpp  HashUtils.h
tests/: test_database.cpp
